# cosmic-osd

./: .gitignore  Cargo.toml  Makefile  TESTING.md  flake.nix  justfile
debian/: changelog  control  copyright  install  rules
i18n/ar/: cosmic_osd.ftl
i18n/be/: cosmic_osd.ftl
i18n/bg/: cosmic_osd.ftl
i18n/ca/: cosmic_osd.ftl
i18n/cs/: cosmic_osd.ftl
i18n/de/: cosmic_osd.ftl
i18n/el/: cosmic_osd.ftl
i18n/en/: cosmic_osd.ftl
i18n/es/: cosmic_osd.ftl
i18n/es-419/: cosmic_osd.ftl
i18n/et/: cosmic_osd.ftl
i18n/fi/: cosmic_osd.ftl
i18n/fr/: cosmic_osd.ftl
i18n/ga/: cosmic_osd.ftl
i18n/he/: cosmic_osd.ftl
i18n/hi/: cosmic_osd.ftl
i18n/hu/: cosmic_osd.ftl
i18n/id/: cosmic_osd.ftl
i18n/is/: cosmic_osd.ftl
i18n/it/: cosmic_osd.ftl
i18n/ja/: cosmic_osd.ftl
i18n/kab/: cosmic_osd.ftl
i18n/kk/: cosmic_osd.ftl
i18n/kmr/: cosmic_osd.ftl
i18n/kn/: cosmic_osd.ftl
i18n/ko/: cosmic_osd.ftl
i18n/lt/: cosmic_osd.ftl
i18n/nb-NO/: cosmic_osd.ftl
i18n/nl/: cosmic_osd.ftl
i18n/nn/: cosmic_osd.ftl
i18n/pa/: cosmic_osd.ftl
i18n/pl/: cosmic_osd.ftl
i18n/pt/: cosmic_osd.ftl
i18n/pt-BR/: cosmic_osd.ftl
i18n/ro/: cosmic_osd.ftl
i18n/ru/: cosmic_osd.ftl
i18n/sk/: cosmic_osd.ftl
i18n/sr/: cosmic_osd.ftl
i18n/sr-Cyrl/: cosmic_osd.ftl
i18n/sr-Latn/: cosmic_osd.ftl
i18n/sv/: cosmic_osd.ftl
i18n/tr/: cosmic_osd.ftl
i18n/uk/: cosmic_osd.ftl
i18n/zh-CN/: cosmic_osd.ftl
i18n/zh-TW/: cosmic_osd.ftl
src/: config.rs  dbus.rs  main.rs  polkit_agent.rs  polkit_agent_helper.rs  polkit_dialog.rs  settings_daemon.rs
src/components/: app.rs  mod.rs  osd_indicator.rs  polkit_dialog.rs
src/components/audio/: mod.rs  model.rs
src/subscriptions/: dbus.rs  keyboard.rs  mod.rs  polkit_agent.rs  polkit_agent_helper.rs  pulse.rs  settings_daemon.rs
src/subscriptions/airplane_mode/: mod.rs  rfkill.rs
