[package]
name = "cosmic-osd"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
env_logger = "0.11.8"
futures = "0.3.31"
i18n-embed = { version = "0.16", features = [
    "fluent-system",
    "desktop-requester",
] }
i18n-embed-fl = "0.10"
cosmic-config = { git = "https://github.com/pop-os/libcosmic" }
cosmic-comp-config = { git = "https://github.com/pop-os/cosmic-comp" }
libcosmic = { git = "https://github.com/pop-os/libcosmic", default-features = false, features = [
    "autosize",
    "dbus-config",
    "desktop-systemd-scope",
    "tokio",
    "wayland",
    "multi-window",
    "winit",
    "single-instance",
] }
log = "0.4.28"
logind-zbus = "5.3.2"
rust-embed = "8.9.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["process"] }
tokio-stream = "0.1.17"
uzers = "0.12.1"
xdg = "3.0"
zbus = { version = "5.12", default-features = false, features = ["tokio"] }
kdl = "6"
cosmic-randr-shell = { git = "https://github.com/pop-os/cosmic-randr", default-features = false }

[dependencies.cosmic-settings-airplane-mode-subscription]
git = "https://github.com/pop-os/cosmic-settings"

[dependencies.cosmic-settings-sound-subscription]
git = "https://github.com/pop-os/cosmic-settings"

[dependencies.cosmic-settings-upower-subscription]
git = "https://github.com/pop-os/cosmic-settings"

[dependencies.cosmic-settings-daemon-subscription]
git = "https://github.com/pop-os/cosmic-settings"

#[patch.'https://github.com/pop-os/libcosmic']
#libcosmic = { path = "../../pop/libcosmic" }
#cosmic-config = { path = "../../pop/libcosmic/cosmic-config" }
#cosmic-theme = { path = "../../pop/libcosmic/cosmic-theme" }
#iced_futures = { path = "../../pop/libcosmic/iced/futures" }

[profile.release]
lto = "thin"
opt-level = 3
panic = "abort"
